# ps5upload

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  VERSION  changes_summary.md  package-lock.json  package.json  ps5upload.ini  test_upload.py
.github/: CODEOWNERS  (+3 more)
client/: Cargo.toml  README.md  build.rs  eslint.config.mjs  index.html  package-lock.json  package.json  ps5upload.ini  ps5upload_history.json  ps5upload_profiles.ini  ps5upload_profiles.json  ps5upload_queue.json  tsconfig.json  vite.config.ts
client/eslint-rules/: no-untranslated-jsx.mjs
client/icons/bundles/macos/: icon.icns
client/src/: App.tsx  chat.rs  config.rs  globals.d.ts  history.rs  i18n.rs  i18n.test.ts  i18n.ts  index.css  main.rs  main.tsx  profiles.rs  protocol.rs  queue.rs  transfer.rs  types.ts  unrar.rs
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: engine.rs  engine_mobile.rs  lib.rs  main.rs
client/src-tauri/src/commands/: app_info.rs  app_lifecycle.rs  bug_report.rs  bug_screenshots.rs  companions.rs  crash_reports.rs  diag_log.rs  diagnostics.rs  discover.rs  folder_inspect.rs  heal_appmeta.rs  keep_awake.rs  local_fs.rs  mod.rs  payloads.rs  persistence.rs  probes.rs  ps5_engine.rs  psn.rs  reveal.rs  save_archive.rs  save_text_file.rs  saves_screenshots.rs  screenshot_convert.rs  search_index_cmd.rs  smp.rs  system_power.rs  title_meta.rs  updates.rs  usb_autoloader.rs  user_config.rs
client/src/api/: engine.ts  localFs.ts  ps5.test.ts  ps5.ts
client/src/components/: Button.tsx  Card.tsx  CommandPalette.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ErrorCard.tsx  GameIcon.tsx  LocalPathPicker.tsx  MarkdownView.tsx  Modal.tsx  OverflowMenu.tsx  PageHeader.tsx  ShortcutsOverlay.tsx  Skeleton.tsx  index.ts
client/src/i18n/: completeness.test.ts  locales.test.ts
client/src/i18n/locales/: ar.ts  bn.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  id.ts  it.ts  ja.ts  ko.ts  pl.ts  pt-BR.ts  ru.ts  th.ts  tr.ts  vi.ts  zh-CN.ts  zh-TW.ts
client/src/layout/: ActivityBar.tsx  AppShell.tsx  NotificationInbox.tsx  OperationBar.tsx  RosterPicker.tsx  Sidebar.tsx  StatusBar.tsx
client/src/lib/: addr.test.ts  addr.ts  androidScreenWake.test.ts  androidScreenWake.ts  appVersion.ts  backupTimestamp.test.ts  backupTimestamp.ts  browserDownload.ts  browserInvoke.ts  bulkDelete.test.ts  bulkDelete.ts  captureScreenshot.ts  crashReporter.test.ts  crashReporter.ts  deleteWithRetry.test.ts  deleteWithRetry.ts  diagnosticBundle.test.ts  diagnosticBundle.ts  ensurePayloadCurrent.ts  format.test.ts  format.ts  fsLastPath.test.ts  fsLastPath.ts  humanizeError.test.ts  humanizeError.ts  invokeLogged.ts  keepAwakeHold.test.ts  keepAwakeHold.ts  libraryFilter.test.ts  libraryFilter.ts  limitConcurrency.test.ts  limitConcurrency.ts  mountDest.test.ts  mountDest.ts  movePollerPolicy.test.ts  movePollerPolicy.ts  moveTarget.test.ts  moveTarget.ts  npxs.test.ts  npxs.ts  (+52 more)
client/src/screens/About/: index.tsx
client/src/screens/Activity/: index.tsx
client/src/screens/AuditLog/: index.tsx
client/src/screens/Backup/: index.tsx
client/src/screens/BugReport/: index.tsx
client/src/screens/Changelog/: index.tsx
client/src/screens/Connection/: BringUpPanel.tsx  PowerControl.tsx  index.tsx
client/src/screens/Dashboard/: index.tsx
client/src/screens/DiskUsage/: index.tsx
client/src/screens/FAQ/: index.tsx
client/src/screens/FileSystem/: applyRenamePattern.test.ts  index.tsx
client/src/screens/FirstRun/: index.tsx
client/src/screens/Hardware/: NetworkPanel.tsx  PeripheralPanel.tsx  PowerTelemetryPanel.tsx  SpeedTestPanel.tsx  index.tsx
client/src/screens/InstallPackage/: index.tsx
client/src/screens/InstalledApps/: index.tsx
client/src/screens/KernelLog/: index.tsx
client/src/screens/Logs/: AppLogsPanel.tsx  index.tsx
client/src/screens/NanoDns/: index.tsx
client/src/screens/Payloads/: CatalogPanel.tsx  PlaylistsPanel.tsx  SendPanel.tsx  UsbAutoloaderModal.tsx  index.tsx
client/src/screens/Processes/: index.tsx
client/src/screens/Profile/: index.tsx
client/src/screens/Saves/: index.tsx
client/src/screens/Screenshots/: index.tsx
client/src/screens/Search/: index.tsx
client/src/screens/SendPayload/: PlaylistsPanel.tsx  index.tsx
client/src/screens/Settings/: index.tsx
client/src/screens/Shell/: index.tsx  shellSequence.test.ts  shellSequence.ts
client/src/screens/Stats/: index.tsx
client/src/screens/Upload/: FfpkgInspectorPanel.tsx  FolderDiffPanel.tsx  QueuePanel.tsx  fileListWindowing.test.ts  index.tsx
client/src/screens/Videos/: index.tsx
client/src/state/: activityHistory.test.ts  activityHistory.ts  activityWiring.ts  auditLog.ts  bringUp.ts  connection.ts  diagSettings.test.ts  diagSettings.ts  engine.ts  engineLogBridge.ts  engineStartupEvents.ts  fsBulkOp.ts  fsClipboard.ts  installQueue.test.ts  installQueue.ts  installSettings.test.ts  installSettings.ts  keepAwake.ts  lang.ts  library.ts  localPicker.test.ts  logs.ts  notifications.ts  payloadPlaylists.ts  pkgLibrary.test.ts  pkgLibrary.ts  playTime.test.ts  playTime.ts  recentHostMetrics.test.ts  recentHostMetrics.ts  recentPaths.test.ts  recentPaths.ts  restAfterUpload.ts  roster.test.ts  roster.ts  runningApps.ts  saveSettings.test.ts  saveSettings.ts  schedules.test.ts  schedules.ts  (+10 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  connection.rs  logging.rs  main.rs  manage.rs  paths.rs  payload.rs  state.rs  transfer.rs
engine/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.webui  README.md
engine/crates/ftx2-proto/: Cargo.toml
engine/crates/ps5upload-bench/: Cargo.toml
engine/crates/ps5upload-core/: Cargo.toml
engine/crates/ps5upload-engine/: Cargo.toml
engine/crates/ps5upload-lab/: Cargo.toml
engine/crates/ps5upload-pkg/: Cargo.toml
engine/crates/ps5upload-tests/: Cargo.toml
(+248 files in other folders)
