[package]
name = "ps5upload"
version = "1.1.3"
edition = "2021"

[dependencies]
eframe = "0.27.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
anyhow = "1.0"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
webbrowser = "0.8"
libc = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
semver = "1.0"
lz4_flex = "0.11"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
winres = "0.1"
