[package]
name = "ps5upload"
version = "1.1.5"
edition = "2021"

[dependencies]
eframe = "0.27.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
anyhow = "1.0"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
webbrowser = "0.8"
libc = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
semver = "1.0"
lz4_flex = "0.11"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
# unrar builds a bundled static lib via unrar_sys by default (no external deps).
unrar = "0.5"
unrar_sys = { version = "0.5", features = ["std"] }
zip = "2.1"
sevenz-rust = "0.6"
widestring = "1.0"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
winres = "0.1"

[profile.release]
opt-level = 3
codegen-units = 4
panic = "unwind"
debug = 1
