[workspace]
members = [
  "crates/ftx2-proto",
  "crates/ps5upload-core",
  "crates/ps5upload-lab",
  "crates/ps5upload-engine",
  "crates/ps5upload-tests",
  "crates/ps5upload-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
blake3 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
