[package]
name = "PS5Upload"
version = "1.2.2"
description = "PS5 Upload desktop wrapper"
authors = ["PS5 Upload Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync"] }
chrono = { version = "0.4", features = ["clock"] }
ps5upload_core = { package = "ps5upload", path = "../../core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
