[package]
name = "ps5upload-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
blake3.workspace = true
ftx2-proto = { path = "../ftx2-proto" }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
# Read .zip game dumps and stream-decompress them straight into the FTX2
# shard pipeline (transfer.rs `transfer_zip`). Deflate-only, matching the
# pin already vetted in client/src-tauri (save_archive.rs) — no bzip2/zstd
# C libs. ZIP is the only archive format we support (see the "drop .rar"
# scope decision).
zip = { version = "8", default-features = false, features = ["deflate"] }
