[package]
name = "ps5upload-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ps5upload-engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
ftx2-proto = { path = "../ftx2-proto" }
# Memory-mapped reads for the single-file transfer path. Without this
# the engine `std::fs::read`-loaded whole game images into RAM (we saw
# an 18 GB exfat consume 18 GB on Windows before the first shard left
# the disk). mmap lets the OS page the file in/out as the transfer
# walks shards, so memory stays bounded by the page-cache budget no
# matter the file size.
memmap2 = "0.9"
ps5upload-core = { path = "../ps5upload-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
uuid.workspace = true
