[package]
name = "ps5upload-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ps5upload_engine"
path = "src/lib.rs"

[[bin]]
name = "ps5upload-engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
ftx2-proto = { path = "../ftx2-proto" }
ps5upload-core = { path = "../ps5upload-core" }
ps5upload-pkg = { path = "../ps5upload-pkg" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http = { version = "0.7", features = ["cors"] }
uuid.workspace = true
